Fix navigation spacing, clean up css, change games permalink.

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -38,14 +38,9 @@ iframe {
 	border: 5px solid rgba(0,0,0,1);
 	border-radius: .6rem;
 }
-/* Not sure what flipped and transparent are for right now */
 .flipped {
   -webkit-transform: rotate(-180deg);
           transform: rotate(-180deg);
-}
-.transparent {
-  opacity: 0;
-  transition: .5s all;
 }
 /* Helper class to center a group of columns horitontally */
 .center-block {
