--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -3,34 +3,36 @@
  */
 
 /* Bracket link hover effect  */
-.cl-effect-1 a::before,
-.cl-effect-1 a::after {
+.bracket a::before,
+.bracket a::after {
 	display: inline-block;
 	opacity: 0;
 	-webkit-transition: -webkit-transform 0.4s, opacity 0.3s;
 	   -moz-transition: -moz-transform 0.4s, opacity 0.3s;
 	        transition: transform 0.4s, opacity 0.3s;
 }
-.cl-effect-1 a::before {
+.bracket a::before {
 	margin-right: 7px;
 	content: '(';
 	-webkit-transform: translateX(7px);
 	-moz-transform: translateX(7px);
 	transform: translateX(7px);
+  vertical-align: 5%;
 }
-.cl-effect-1 a::after {
+.bracket a::after {
 	margin-left: 7px;
 	content: ')';
 	-webkit-transform: translateX(-7px);
 	-moz-transform: translateX(-7px);
 	transform: translateX(-7px);
+  vertical-align: 5%;
 }
-.cl-effect-1 a:hover::before,
-.cl-effect-1 a:hover::after,
-.cl-effect-1 a:focus::before,
-.cl-effect-1 a:focus::after,
-.cl-effect-1 li.active a::before,
-.cl-effect-1 li.active a::after {
+.bracket a:hover::before,
+.bracket a:hover::after,
+.bracket a:focus::before,
+.bracket a:focus::after,
+.bracket li.active a::before,
+.bracket li.active a::after {
 	opacity: 1;
 	-webkit-transform: translateX(0px);
 	-moz-transform: translateX(0px);
@@ -54,16 +56,32 @@
   border-bottom: 0px;
   transition: .3s all;
   font-size: 1.1rem;
-  margin-right: -.5rem;
 }
-@media (max-width: 800px) {
-  .navbar-nav {
-    margin-right: 20px;
+@media (min-width: 992px) {
+  .navbar .navbar-brand {
+    margin-right: -.5rem;
   }
+}
+.navbar-nav {
+  display: inline-block;
+}
+.navbar-right {
+  float: right;
+  padding-right: 15px;
 }
 .navbar-nav li {
   margin-bottom: 0px;
-  /* padding: 10px 10px; */
+  display: inline-block;
+}
+.navbar-nav li a {
+  padding-left: 0;
+  padding-right: 0;
+}
+@media (min-width: 768px) {
+  .navbar-nav li a {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 .navbar-nav a,
 .navbar-toggle i {
@@ -86,51 +104,26 @@
   opacity: 1;
   transition: .3s all;
 }
-.navbar-toggle {
-  padding: 3px;
-  margin-right: 37px;
-}
 .icon-panel {
-  position: fixed;
-  cursor: pointer;
-  z-index: 2000;
-  top: 15px;
-  margin-right:0px;
-}
-.icon-panel,
-.icon-close {
   color: #FFF !important;
   opacity: .8;
-  margin-left: 15px;
   transition: .3s all;
 }
-.icon-close {
-  position: absolute !important;
-  -webkit-transform: rotate(-180deg);
-          transform: rotate(-180deg);
-}
-/*.icon-panel:hover {
-  -webkit-transform: rotate(-180deg);
-          transform: rotate(-180deg);
-}*/
-
 .navbar:hover .icon-panel,
-.icon-panel:hover,
-.icon-close:hover {
+.icon-panel:hover {
   opacity: 1;
   transition: .3s all;
 }
-.icon-close {
-  display: none;
-}
-
 /* Changes font size of gamepad to match other icon */
 .fa-gamepad {
-	font-size:1.5rem;
-	vertical-align: -10%;
-	margin-top: -6px;
+	font-size: 1.5rem;
+	vertical-align: -8%;
+	margin-top: -10px;
 }
-
-.fa-th {
+/*.fa-th {
 	vertical-align: -10%;
+}*/
+.navbar-transparent {
+  background-color: transparent;
+  transition: .5s all;
 }
